Fix Docker build issues and update configuration
- Use existing 'node' user (UID 1000) instead of creating clawdbot user
- Add CRLF to LF conversion in Dockerfile for Windows compatibility
- Update entrypoint to use /home/node as HOME
- Add doctor --fix before starting gateway
- Update docker-compose.yml with correct HOME path

--- a/umbrel-app/clawdbot/docker-compose.yml
+++ b/umbrel-app/clawdbot/docker-compose.yml
@@ -25,7 +25,7 @@ services:
       NODE_ENV: production
       
       # Home directory (matches Dockerfile user)
-      HOME: /home/clawdbot
+      HOME: /home/node
     
     volumes:
       # Persistent data directories
