Fix memory-core plugin validation by including bundled extensions
- Copy /app/extensions to runtime image (contains memory-core plugin)
- Remove plugins.enabled=false from entrypoint config generation
- Gateway now starts successfully with default plugin configuration
- Local Docker testing verified: gateway binds and serves Control UI

--- a/.github/workflows/update-umbrel-app.yml
+++ b/.github/workflows/update-umbrel-app.yml
@@ -109,7 +109,7 @@ jobs:
           # Handles both old (clawdbot-docker) and new (clawdbot-umbrel) image names
           # Replace with: image: <image>:<version>@<digest>
           if sed -i "s|^\([[:space:]]*image:[[:space:]]*\).*|\1${IMAGE}:${VERSION}@${DIGEST}|g" "$COMPOSE_FILE"; then
-            echo "Successfully updated docker-compose.yml"
+            echo "✅ Successfully updated docker-compose.yml"
           else
             echo "ERROR: Failed to update docker-compose.yml"
             mv "${COMPOSE_FILE}.bak" "$COMPOSE_FILE"
