Update docker-compose with digest-pinned image for Umbrel submission
- Pin image to v2026.1.23@sha256:60c7f6e066702485acc9faa0abd0fc55ee5804fdd0f80015857136fa816fb9a1
- Update version to 2026.1.23

--- a/umbrel-app/clawdbot/docker-compose.yml
+++ b/umbrel-app/clawdbot/docker-compose.yml
@@ -9,7 +9,7 @@ services:
   gateway:
     # Custom Clawdbot Docker image for Umbrel
     # Built from: https://github.com/harmalh/clawdbot-umbrel
-    image: ghcr.io/harmalh/clawdbot-umbrel:latest
+    image: ghcr.io/harmalh/clawdbot-umbrel:v2026.1.23@sha256:60c7f6e066702485acc9faa0abd0fc55ee5804fdd0f80015857136fa816fb9a1
     
     environment:
       # Pass Umbrel's app password as the gateway token
