Remove non-essential files from public repo
Removed:
- docs/ directory (internal notes, token setup guides)
- scripts/ directory (personal automation scripts)
- TESTING.md (internal checklist)

Updated:
- .gitignore to exclude these going forward
- .dockerignore for consistency
- README.md to remove script references

--- a/.dockerignore
+++ b/.dockerignore
@@ -21,10 +21,9 @@ test-data/
 # Umbrel app definition (not needed in image)
 umbrel-app/
 
-# Scripts (update automation, not needed in image)
+# Internal files (not needed in image)
+docs/
 scripts/
-
-# Remotion video project (large, not needed in image)
 video/
 
 # Pull request cache
