--- a/.github/workflows/build-image.yml
+++ b/.github/workflows/build-image.yml
@@ -43,6 +43,11 @@ on:
         required: false
         default: true
         type: boolean
+      run_ui_tests:
+        description: 'Run UI regression tests after build'
+        required: false
+        default: false
+        type: boolean
 
 env:
   REGISTRY: ghcr.io
@@ -281,6 +286,13 @@ jobs:
           
           echo "✅ Image digest validated: $DIGEST"
           echo "Full image reference: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}@$DIGEST"
+
+  ui-tests:
+    needs: build
+    if: github.event.inputs.run_ui_tests == 'true'
+    uses: ./.github/workflows/ui-regression-test.yml
+    with:
+      image: ghcr.io/${{ github.repository_owner }}/clawdbot-umbrel:${{ needs.build.outputs.version }}
 
   trigger-umbrel-update:
     needs: build
